Update dependencies and fix deprecations